syntax = "proto3";

package calculator;

option go_package = "grpc-go/calculator/proto";

message CalcRequest{
    int32 value_x =1;
    int32 value_y =2;
}

message CalcResponse{
    int32 result = 1;
}

message PrimesRequest{
    int32 input = 1;
}

message PrimesResponse{
    int32 output = 1;
}

message AvgRequest{
    int32 input = 1;
}

message AvgResponse{
    double output = 1; 
}

message MaxRequest{
    int32 in = 1;
}

message MaxResponse{
    int32 out=1;
}

message SqrtRequest{
    int32 number = 1;
}

message SqrtResponse{
    double result = 1;
}

service CalcService{
    rpc Add (CalcRequest) returns (CalcResponse);
    rpc Primes (PrimesRequest) returns (stream PrimesResponse);
    rpc Avg (stream AvgRequest) returns (AvgResponse);
    rpc Max(stream MaxRequest) returns (stream MaxResponse);
    rpc Sqrt(SqrtRequest) returns (SqrtResponse);
}